--- a/todo.txt
+++ b/todo.txt
@@ -21,8 +21,9 @@ MODELING
 
 CODING
 - Audio log system                          Finish by 30th of August
-- Save/restore implementation for
-  ambient_2d and ambient_mp3                Finish by 16th of August
+- Rewrite the fixes for ambient_2d and
+  ambient_mp3 because windawz is a
+  fucking idiot                             Finish by 17th of August
 
 MUSIC
 - Martin Boss Fight                         Finish by 5th of September
